--- a/settings.html
+++ b/settings.html
@@ -47,7 +47,7 @@
       const value = parseInt(document.getElementById('numberInput').value, 10);
       if (value >= 10 && value <= 200) {
         localStorage.setItem(settingsStorageKey, value);
-        alert("Setting saved!");
+        alert("Setting saved! It will start reflecting starting tomorrow!");
       } else {
         alert("Please enter a number between 10 and 200.");
       }
